k8s/commandservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: commandservice:latest
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: commandservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
