k8s/platformservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: platformservice:latest
          imagePullPolicy: Never

---
apiVersion: v1
kind: Service
metadata:
  name: platformservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
